# TSP

./: .gitignore  Dockerfile  GUIDE.md  README.md  ansible.cfg  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ansible/: deploy-container.yml  deploy.yml  inventory.example.ini
configs/: config.yaml
configs/augmentation/: basic.yaml  none.yaml  torcheeg.yaml
configs/dataset/: eegbci.yaml
configs/dataset_export/: default.yaml
configs/epoch_preprocessing/: default.yaml  epoch_preprocessing.yaml  testing.yaml
configs/epoching/: default.yaml
configs/evaluation/: default.yaml  sklearn.yaml
configs/final_trainer/: default.yaml  eegnet.yaml
configs/metrics_aggregator/: default.yaml
configs/model/: eegnet.yaml
configs/model/deep_learning/: eegnet.yaml
configs/model/machine_learning/: csp_lda.yaml  riemannian_lda.yaml  riemannian_lr.yaml  riemannian_mdm.yaml  riemannian_rf.yaml  riemannian_svm.yaml
configs/model/training/: default.yaml
configs/model_path/: default.yaml
configs/paradigm/: default.yaml  testing.yaml
configs/preprocessing/: mne.yaml
configs/raw_augmentation/: none.yaml  raw_torcheeg.yaml  torcheeg.yaml
configs/raw_preprocessing/: default.yaml  mne.yaml  raw_preprocessing.yaml  testing.yaml
configs/save_artifacts/: default.yaml
configs/source/: external.yaml  filesystem.yaml
configs/split/: basic.yaml  default.yaml  moabb_cross_session.yaml  moabb_cross_subject.yaml  moabb_within_session.yaml  moabb_within_subject.yaml
configs/training/: eegnet.yaml
configs/visualization/: matplotlib.yaml  plotly.yaml
src/: main.py  mein.py  mejn.py
src/impl/artifacts_saver/: artifacts_saver.py
src/impl/augmentation/: basic_augmentor.py  dummy_augmentor.py  torcheeg_augmentor.py
src/impl/data_loader/: EDFLoader.py  FilesystemDatasetLoader.py  MOABBDataLoader.py  dummy_data_loader.py
src/impl/dataset_export/: fif_dataset_exporter.py
src/pipeline/: experiment_pipeline.py  pipeline-step.py  pipeline.py  run_context_factory.py  stage_factory.py  step-result.py  step_result.py
src/validation/: config_validator.py  validation-issue.py  validation_input.py  validation_issue.py  validation_message.py  validation_result.py
tests/: test_smoke.py
(+177 files in other folders)
