[project]
name = "project-name"
requires-python = ">=3.10"

[tool.ruff]
# Matches your requirement for line length
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors (PEP8)
    "W", # pycodestyle warnings (PEP8)
    "F", # Pyflakes (logic errors, unused imports)
    "I", # isort (import sorting)
    "N", # pep8-naming (naming conventions)
    "D", # pydocstyle (docstring requirements)
    "UP", # pyupgrade (modern Python syntax)
    "B", # flake8-bugbear (common design flaws/fail-fast)
    "T20", # flake8-print (disallow print statements)
    "BLE", # flake8-blind-except (disallow except Exception: pass)
]

# Specific rules to ignore
ignore = ["D212"]

[tool.ruff.lint.pydocstyle]
# Enforce Google-style docstrings (Args, Returns, Raises)
convention = "google"

[tool.ruff.format]
# Formatting settings matching Black standard
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
# Mypy configuration for strict type checking
python_version = "3.10"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
# Disallow the use of 'Any' type
disallow_any_generics = true