[project]
name = "tsp-eeg-classification"
version = "0.0.4"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "build"
]

[tool.ruff]
# Matches your requirement for line length.
line-length = 250
target-version = "py310"

[tool.ruff.lint]
select = [

]

# Specific rules to ignore
ignore = ["D", "T201", "W293"] # T201 for prints -- transform prints into logs

[tool.ruff.lint.pydocstyle]
# Enforce Google-style docstrings (Args, Returns, Raises)
convention = "google"

[tool.ruff.format]
# Formatting settings matching Black standard
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
exclude = ["src/impl/model/model_factory.py"]

[tool.mypy]
# Mypy configuration for strict type checking
python_version = "3.10"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
# Disallow the use of 'Any' type
disallow_any_generics = true